# ICPFullOnChainHackathon2023

./: Cargo.toml  README.md  dfx.json  package.json  webpack.config.js
src/ICPFullOnChainHackathon2023_backend/: Cargo.toml
src/ICPFullOnChainHackathon2023_backend/src/: lib.rs
src/ICPFullOnChainHackathon2023_frontend/src/: index.html  index.js
