[package]
name = "ICPFullOnChainHackathon2023_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.9.7"
ic-cdk = "0.11.0"
reqwest = "0.11.20"
rocket = "0.4.11"
